--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,9 +1,12 @@
-name: Generate Number
+name: test Generate Number
 
 on:
   schedule:
-    - cron: "0 * * * *"   # Runs every hour
-  workflow_dispatch:       # Allow manual run
+    - cron: "0 * * * *"   # every hour
+  workflow_dispatch:
+
+permissions:
+  contents: write   # allow push
 
 jobs:
   build:
@@ -11,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -25,5 +30,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add numbers.txt
-          git commit -m "Add number [skip ci]" || echo "No changes to commit"
-          git push
+          git commit -m "Add number [skip ci]" || exit 0
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }} HEAD:main
