--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -31,4 +31,4 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add numbers.txt
           git commit -m "Add number [skip ci]" || exit 0
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }} HEAD:main
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Ashutosh-Gairola/random_password_generator.git HEAD:main
