--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,11 @@ name: MAIN Generate Number
 
 on:
   schedule:
-    - cron: "0 * * * *"   # Runs every hour
-  workflow_dispatch:       # Allow manual run
+    - cron: "0 * * * *"   # every hour
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -11,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -18,12 +23,12 @@ jobs:
           python-version: '3.x'
 
       - name: Run script
-        run: python test.py
+        run: python generate_number.py
 
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add numbers.txt
-          git commit -m "Add number [skip ci]" || echo "No changes to commit"
-          git push
+          git commit -m "Add number [skip ci]" || exit 0
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Ashutosh-Gairola/random_password_generator.git HEAD:main
